// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Code Generator Integration > should match snapshot with filetype=js 1`] = `
"/**
 * Auto-generated from Airtable schema
 * Do not edit manually
 */

export default {
  "id": "appTaskBase",
  "name": "taskTracker",
  "tables": [
    {
      "id": "tblTasks",
      "name": "tasks",
      "fields": [
        {
          "id": "fldName",
          "name": "Name",
          "type": "singleLineText",
          "description": "The name of the task"
        },
        {
          "id": "fldStatus",
          "name": "Status",
          "type": "singleSelect",
          "description": "The current status of the task",
          "options": {
            "choices": [
              {
                "id": "selTodo",
                "name": "Todo",
                "color": "blueLight2"
              },
              {
                "id": "selInProgress",
                "name": "In Progress",
                "color": "yellowLight2"
              },
              {
                "id": "selDone",
                "name": "Done",
                "color": "greenLight2"
              }
            ]
          }
        },
        {
          "id": "fldPriority",
          "name": "Priority",
          "type": "number",
          "description": "The priority level of the task. Lower numbers indicate higher priority.",
          "options": {
            "precision": 0
          }
        },
        {
          "id": "fldDueDate",
          "name": "Due Date",
          "type": "date",
          "description": "The due date of the task"
        },
        {
          "id": "fldCompleted",
          "name": "Completed",
          "type": "checkbox",
          "description": "Whether the task is completed"
        },
        {
          "id": "fldNotes",
          "name": "Notes",
          "type": "multilineText",
          "description": "Additional notes about the task"
        },
        {
          "id": "fldTags",
          "name": "Tags",
          "type": "multipleSelects",
          "description": "Tags associated with the task",
          "options": {
            "choices": [
              {
                "id": "selUrgent",
                "name": "Urgent",
                "color": "redLight2"
              },
              {
                "id": "selImportant",
                "name": "Important",
                "color": "orangeLight2"
              }
            ]
          }
        },
        {
          "id": "fldAttachments",
          "name": "Attachments",
          "type": "multipleAttachments",
          "description": "Files attached to the task"
        },
        {
          "id": "fldCreatedAt",
          "name": "Created At",
          "type": "createdTime",
          "description": "The time when the task was created"
        },
        {
          "id": "fldUpdatedAt",
          "name": "Updated At",
          "type": "lastModifiedTime",
          "description": "The time when the task was last updated"
        },
        {
          "id": "fldAssignedTo",
          "name": "Assigned To",
          "type": "multipleRecordLinks",
          "description": "Users assigned to the task",
          "options": {
            "linkedTableId": "tblUsers"
          }
        }
      ]
    },
    {
      "id": "tblUsers",
      "name": "users",
      "fields": [
        {
          "id": "fldEmail",
          "name": "Email",
          "type": "email"
        },
        {
          "id": "fldFullName",
          "name": "Full Name",
          "type": "singleLineText"
        },
        {
          "id": "fldPhone",
          "name": "Phone",
          "type": "phoneNumber",
          "description": "please include area code"
        }
      ]
    }
  ]
};
"
`;

exports[`Code Generator Integration > should match snapshot with filetype=ts 1`] = `
"/**
 * Auto-generated from Airtable schema
 * Do not edit manually
 */

export default {
  "id": "appTaskBase",
  "name": "taskTracker",
  "tables": [
    {
      "id": "tblTasks",
      "name": "tasks",
      "fields": [
        {
          "id": "fldName",
          "name": "Name",
          "type": "singleLineText",
          "description": "The name of the task"
        },
        {
          "id": "fldStatus",
          "name": "Status",
          "type": "singleSelect",
          "description": "The current status of the task",
          "options": {
            "choices": [
              {
                "id": "selTodo",
                "name": "Todo",
                "color": "blueLight2"
              },
              {
                "id": "selInProgress",
                "name": "In Progress",
                "color": "yellowLight2"
              },
              {
                "id": "selDone",
                "name": "Done",
                "color": "greenLight2"
              }
            ]
          }
        },
        {
          "id": "fldPriority",
          "name": "Priority",
          "type": "number",
          "description": "The priority level of the task. Lower numbers indicate higher priority.",
          "options": {
            "precision": 0
          }
        },
        {
          "id": "fldDueDate",
          "name": "Due Date",
          "type": "date",
          "description": "The due date of the task"
        },
        {
          "id": "fldCompleted",
          "name": "Completed",
          "type": "checkbox",
          "description": "Whether the task is completed"
        },
        {
          "id": "fldNotes",
          "name": "Notes",
          "type": "multilineText",
          "description": "Additional notes about the task"
        },
        {
          "id": "fldTags",
          "name": "Tags",
          "type": "multipleSelects",
          "description": "Tags associated with the task",
          "options": {
            "choices": [
              {
                "id": "selUrgent",
                "name": "Urgent",
                "color": "redLight2"
              },
              {
                "id": "selImportant",
                "name": "Important",
                "color": "orangeLight2"
              }
            ]
          }
        },
        {
          "id": "fldAttachments",
          "name": "Attachments",
          "type": "multipleAttachments",
          "description": "Files attached to the task"
        },
        {
          "id": "fldCreatedAt",
          "name": "Created At",
          "type": "createdTime",
          "description": "The time when the task was created"
        },
        {
          "id": "fldUpdatedAt",
          "name": "Updated At",
          "type": "lastModifiedTime",
          "description": "The time when the task was last updated"
        },
        {
          "id": "fldAssignedTo",
          "name": "Assigned To",
          "type": "multipleRecordLinks",
          "description": "Users assigned to the task",
          "options": {
            "linkedTableId": "tblUsers"
          }
        }
      ]
    },
    {
      "id": "tblUsers",
      "name": "users",
      "fields": [
        {
          "id": "fldEmail",
          "name": "Email",
          "type": "email"
        },
        {
          "id": "fldFullName",
          "name": "Full Name",
          "type": "singleLineText"
        },
        {
          "id": "fldPhone",
          "name": "Phone",
          "type": "phoneNumber",
          "description": "please include area code"
        }
      ]
    }
  ]
} as const;
"
`;

exports[`Code Generator Integration > should match snapshot with no options 1`] = `
"/**
 * Auto-generated from Airtable schema
 * Do not edit manually
 */

export default {
  "id": "appTaskBase",
  "name": "taskTracker",
  "tables": [
    {
      "id": "tblTasks",
      "name": "tasks",
      "fields": [
        {
          "id": "fldName",
          "name": "Name",
          "type": "singleLineText",
          "description": "The name of the task"
        },
        {
          "id": "fldStatus",
          "name": "Status",
          "type": "singleSelect",
          "description": "The current status of the task",
          "options": {
            "choices": [
              {
                "id": "selTodo",
                "name": "Todo",
                "color": "blueLight2"
              },
              {
                "id": "selInProgress",
                "name": "In Progress",
                "color": "yellowLight2"
              },
              {
                "id": "selDone",
                "name": "Done",
                "color": "greenLight2"
              }
            ]
          }
        },
        {
          "id": "fldPriority",
          "name": "Priority",
          "type": "number",
          "description": "The priority level of the task. Lower numbers indicate higher priority.",
          "options": {
            "precision": 0
          }
        },
        {
          "id": "fldDueDate",
          "name": "Due Date",
          "type": "date",
          "description": "The due date of the task"
        },
        {
          "id": "fldCompleted",
          "name": "Completed",
          "type": "checkbox",
          "description": "Whether the task is completed"
        },
        {
          "id": "fldNotes",
          "name": "Notes",
          "type": "multilineText",
          "description": "Additional notes about the task"
        },
        {
          "id": "fldTags",
          "name": "Tags",
          "type": "multipleSelects",
          "description": "Tags associated with the task",
          "options": {
            "choices": [
              {
                "id": "selUrgent",
                "name": "Urgent",
                "color": "redLight2"
              },
              {
                "id": "selImportant",
                "name": "Important",
                "color": "orangeLight2"
              }
            ]
          }
        },
        {
          "id": "fldAttachments",
          "name": "Attachments",
          "type": "multipleAttachments",
          "description": "Files attached to the task"
        },
        {
          "id": "fldCreatedAt",
          "name": "Created At",
          "type": "createdTime",
          "description": "The time when the task was created"
        },
        {
          "id": "fldUpdatedAt",
          "name": "Updated At",
          "type": "lastModifiedTime",
          "description": "The time when the task was last updated"
        },
        {
          "id": "fldAssignedTo",
          "name": "Assigned To",
          "type": "multipleRecordLinks",
          "description": "Users assigned to the task",
          "options": {
            "linkedTableId": "tblUsers"
          }
        }
      ]
    },
    {
      "id": "tblUsers",
      "name": "users",
      "fields": [
        {
          "id": "fldEmail",
          "name": "Email",
          "type": "email"
        },
        {
          "id": "fldFullName",
          "name": "Full Name",
          "type": "singleLineText"
        },
        {
          "id": "fldPhone",
          "name": "Phone",
          "type": "phoneNumber",
          "description": "please include area code"
        }
      ]
    }
  ]
} as const;
"
`;
